--- a/public/assignment/widget/views/widget-edit.view.client.html
+++ b/public/assignment/widget/views/widget-edit.view.client.html
@@ -1,13 +1,13 @@
-<nav class="navbar vsk-page-navbar navbar-fixed-top">
+<nav class="navbar my-page-navbar navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
-                <span class="glyphicon glyphicon-chevron-left vsk-glyphicon"></span>
+                <span class="glyphicon glyphicon-chevron-left my-glyphicon"></span>
             </a>
         </div>
         <div class="navbar-text pull-right">
             <a ng-click="model.updateWidget()">
-                <span class="glyphicon glyphicon-ok vsk-glyphicon"></span>
+                <span class="glyphicon glyphicon-ok my-glyphicon"></span>
             </a>
         </div>
         <div class="navbar-header">
@@ -38,10 +38,10 @@
 
 </div>
 
-<nav class="navbar vsk-page-navbar navbar-fixed-bottom">
+<nav class="navbar my-page-navbar navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-header pull-right">
-            <a class="navbar-brand" href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user vsk-glyphicon-page"> </span></a>
+            <a class="navbar-brand" href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user my-glyphicon-page"> </span></a>
         </div>
     </div>
 </nav>
