--- a/public/assignment/page/views/page-edit.view.client.html
+++ b/public/assignment/page/views/page-edit.view.client.html
@@ -1,31 +1,31 @@
-<nav class="navbar vsk-page-navbar navbar-fixed-top">
+<nav class="navbar my-page-navbar navbar-fixed-top">
     <div class="row container-fluid">
         <div class="col-sm-4 hidden-xs">
-            <!-- Brand and toggle get grouped for better mobile display -->
+
             <div class="navbar-text pull-left">
                 <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page">
-                    <span class="glyphicon glyphicon-chevron-left vsk-glyphicon"></span>
+                    <span class="glyphicon glyphicon-chevron-left my-glyphicon"></span>
                 </a>
             </div>
             <div class="navbar-header pull-left">
                 <a class="navbar-brand" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page">Pages</a>
             </div>
             <div class="navbar-text pull-right">
-                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new"><span class="glyphicon glyphicon-plus vsk-glyphicon"></span>
+                <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/new"><span class="glyphicon glyphicon-plus my-glyphicon"></span>
                 </a>
             </div>
         </div>
         <div class="col-sm-8">
             <div class="navbar-text pull-left visible-xs">
                 <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page">
-                    <span class="glyphicon glyphicon-chevron-left vsk-glyphicon"></span>
+                    <span class="glyphicon glyphicon-chevron-left my-glyphicon"></span>
                 </a>
             </div>
             <div class="navbar-header pull-left">
                 <a class="navbar-brand" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}">Edit page</a>
             </div>
             <div class="navbar-text pull-right">
-                <a ng-click="model.updatePage(model.page)"><span class="glyphicon glyphicon-ok vsk-glyphicon"></span>
+                <a ng-click="model.updatePage(model.page)"><span class="glyphicon glyphicon-ok my-glyphicon"></span>
                 </a>
             </div>
         </div>
@@ -75,11 +75,11 @@
 </div>
 
 
-<nav class="navbar vsk-page-navbar navbar-fixed-bottom">
+<nav class="navbar my-page-navbar navbar-fixed-bottom">
     <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+
         <div class="navbar-header pull-right">
-            <a class="navbar-brand" href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user vsk-glyphicon-page"> </span></a>
+            <a class="navbar-brand" href="#/user/{{model.userId}}"><span class="glyphicon glyphicon-user my-glyphicon-page"> </span></a>
         </div>
     </div>
 </nav>
