--- a/public/assignment/website/views/website-list.view.client.html
+++ b/public/assignment/website/views/website-list.view.client.html
@@ -17,46 +17,20 @@
 
     <ul class="list-group">
         <li class="list-group-item">
-            <div class="row">
-                <div class="col-xs-6">
-                    <strong>Name</strong>
-                    <a>
-                        <span class="glyphicon glyphicon-triangle-top"></span>
-                    </a>
-                </div>
-                <div class="col-xs-3 hidden-xs">
-                    <strong>Last Updated</strong>
-                    <a>
-                        <span class="glyphicon glyphicon-triangle-top"></span>
-                    </a>
-                </div>
-                <div class="col-xs-2 hidden-xs">
-                    <strong>Created By</strong>
-                    <a>
-                        <span class="glyphicon glyphicon-triangle-top"></span>
-                    </a>
-                </div>
+            <div>
+                <strong>Name</strong>
             </div>
         </li>
         <li ng-repeat="website in model.websites" class="list-group-item">
-            <div class="row">
-                <div class="col-xs-6">
-                    <a href="#/user/{{website.developerId}}/website/{{website._id}}/page">
-                        {{website.name}}
-                    </a>
-                </div>
-                <div class="col-xs-3 hidden-xs small">
-                    {{website.update | date}}
-                </div>
-                <div class="col-xs-2 hidden-xs small">
-                    {{website.developerId}}
-                </div>
-                <div class="col-sm-1 col-xs-6">
-                    <a href="#/user/{{website.developerId}}/website/{{website._id}}" class="pull-right">
+                <a href="#/user/{{website.developerId}}/website/{{website._id}}/page">
+                    {{website.name}}
+                </a>
+                <div class="pull-right">
+                    <a href="#/user/{{website.developerId}}/website/{{website._id}}">
                         <span class="glyphicon glyphicon-cog"></span>
                     </a>
                 </div>
-            </div>
+
         </li>
     </ul>
 
