--- a/public/assignment/widget/views/widget-chooser.view.client.html
+++ b/public/assignment/widget/views/widget-chooser.view.client.html
@@ -1,8 +1,8 @@
-<nav class="navbar vsk-page-navbar navbar-fixed-top">
+<nav class="navbar my-page-navbar navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
             <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
-                <span class="glyphicon glyphicon-chevron-left vsk-glyphicon"></span>
+                <span class="glyphicon glyphicon-chevron-left my-glyphicon"></span>
             </a>
         </div>
         <div class="navbar-header">
@@ -17,19 +17,19 @@
             <a ng-click="model.addWidget('HEADER')"> Header</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Label</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Label</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> HTML</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> HTML</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Text Input</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Text Input</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Link</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Link</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Button</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Button</a>
         </li>
         <li class="list-group-item">
             <a ng-click="model.addWidget('IMAGE')"> Image</a>
@@ -38,10 +38,10 @@
             <a ng-click="model.addWidget('YOUTUBE')"> YouTube</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Data Table</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Data Table</a>
         </li>
         <li class="list-group-item">
-            <a href="widget-list.view.client.html"> Repeater</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Repeater</a>
         </li>
     </ul>
 </div>
