--- a/public/assignment/widget/views/widget-chooser.view.client.html
+++ b/public/assignment/widget/views/widget-chooser.view.client.html
@@ -6,7 +6,7 @@
             </a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">Choose Widget</a>
+            <a class="navbar-brand" href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new">Choose Widget</a>
         </div>
     </div>
 </nav>
@@ -17,19 +17,19 @@
             <a ng-click="model.addWidget('HEADER')"> Header</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Label</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Label</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> HTML</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> HTML</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Text Input</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Text Input</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Link</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Link</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Button</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Button</a>
         </li>
         <li class="list-group-item">
             <a ng-click="model.addWidget('IMAGE')"> Image</a>
@@ -38,10 +38,10 @@
             <a ng-click="model.addWidget('YOUTUBE')"> YouTube</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Data Table</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Data Table</a>
         </li>
         <li class="list-group-item">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget"> Repeater</a>
+            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new"> Repeater</a>
         </li>
     </ul>
 </div>
