--- a/public/assignment/style/style.css
+++ b/public/assignment/style/style.css
@@ -107,3 +107,17 @@ a:hover {
     background-color: #363b3e;
 }
 
+.youtube-widget {
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+}
+
+.youtube-widget iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
