--- a/public/assignment/widget/views/widget-edit.view.client.html
+++ b/public/assignment/widget/views/widget-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar my-page-navbar navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-text pull-left">
-            <a href="#/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
+            <a class="vsk-ngclick-a" ng-click="model.backButtonHandler()>
                 <span class="glyphicon glyphicon-chevron-left my-glyphicon"></span>
             </a>
         </div>
@@ -24,9 +24,15 @@
         {{model.error}}
     </div>
 
-    <div ng-switch="model.widget.widgetType">
-        <div ng-switch-when="HEADER">
+    <div ng-switch="model.widget.type">
+        <div ng-switch-when="HEADING">
             <ng-include src="'widget/views/widget-heading-edit.view.client.html'"/>
+        </div>
+        <div ng-switch-when="HTML">
+            <ng-include src="'widget/views/widget-html-edit.view.client.html'"/>
+        </div>
+        <div ng-switch-when="TEXT">
+            <ng-include src="'widget/views/widget-text-edit.view.client.html'"/>
         </div>
         <div ng-switch-when="IMAGE">
             <ng-include src="'widget/views/widget-image-edit.view.client.html'"/>
@@ -41,7 +47,8 @@
 <nav class="navbar my-page-navbar navbar-fixed-bottom">
     <div class="container-fluid">
         <div class="navbar-header pull-right">
-            <a class="navbar-brand" href="../views/user/profile.view.client.html"><span class="glyphicon glyphicon-user my-glyphicon-page"> </span></a>
+            <a class="navbar-brand" href="#/user/{{model.userId}}">
+                <span class="glyphicon glyphicon-user my-glyphicon-page"> </span></a>
         </div>
     </div>
 </nav>
