--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,10 +24,11 @@ p {
   line-height: 0;
   height: auto;
   color: rgba(255,255,255,.9);
+  -webkit-animation: fadein 2.5s
 }
-  .parallax-container .section {
-    width: 100%;
-  }
+.parallax-container .section {
+  width: 100%;
+}
 
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
@@ -57,4 +58,11 @@ footer.page-footer {
 }
 .Vikash {
   margin-top: -150px;
+}
+.container{
+  -webkit-animation: fadein 2s;
+}
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
